share-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~ ^(/.*/proxy/alfresco/api/solr/.*)$ {return 403 ;}
                  location ~ ^(/.*/-default-/proxy/alfresco/api/.*)$ {return 403;}
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
  creationTimestamp: "2019-10-26T16:26:10Z"
  generation: 1
  name: igor-alfresco-cs-share
  namespace: arm-csbs-dev-k8-acs-namespace
  resourceVersion: "3192132"
  selfLink: /apis/extensions/v1beta1/namespaces/arm-csbs-dev-k8-acs-namespace/ingresses/igor-alfresco-cs-share
  uid: 5232c2cb-f80d-11e9-a451-0e63611d085e
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: igor-alfresco-cs-share
          servicePort: 80
        path: /share
status:
  loadBalancer:
    ingress:
    - hostname: a0c54027ce95911e9a4510e63611d085-1469418408.us-east-1.elb.amazonaws.com
